--- a/src/nav.css
+++ b/src/nav.css
@@ -1,3 +1,45 @@
-*{
-    
+*
+{
+    margin:0;
+    padding:0;
+    font-family: sans-serif;
+    box-sizing: border-box;
+}
+
+.free{
+    padding: 10px 30px;
+    width: 100%;
+    background: #010f1c;
+}
+.free .icon{
+    color:#f3b123;
+    font-size:22px;
+}
+
+.free p{
+    margin-left:10px;
+    color:#f6f7f9;
+    margin-top:5px;
+    font-size:14px;
+    font-weight:600;
+}
+
+.main_header{
+    padding:30px 40px;
+    width: 100%;
+    border-bottom:#010f1c;
+}
+.main_header .container{ 
+
+    display:flex;
+    justify-content:space-between;
+ }
+ .main_header .container .search_box{ 
+    margin-right:30px;
+  }
+
+.main_header .container .search_box input{
+    outline:none;
+    padding:20px 30px;
+    border: 3px solid #0989ff;
 }
